Support fixed-top and fixed-bottom for collapsed navbar Add 2 classes: navbar-collapse-fixed-top and navbar-collapse-fixed-bottom

--- a/source/plg_system_t3/base/less/t3-responsive.less
+++ b/source/plg_system_t3/base/less/t3-responsive.less
@@ -20,4 +20,22 @@
   .always-show .dropdown-menu {
     display: block !important;
   }
+
+  // ------------------------------------------------------
+  // Support fixed navbar when collapsed
+  // -------------------------------------------------------
+  .navbar-collapse-fixed-top,
+  .navbar-collapse-fixed-bottom {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+
+  .navbar-collapse-fixed-bottom {
+    bottom: 0;
+    top: auto;
+  }
+
 }
